--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
   </head>
   <body>
 
-    <div class="text-box">
+    <ul class="info-head sans">
+      <li>Andie Kolbeck + Jason Perez</li>
+      <li>October 14, 2017</li>
+      <li>Oakland, CA</li>
+    </ul>
+
+    <ul class="menu sans">
+      <li><a href="">RSVP</a></li>
+      <li><a href="">Information</a></li>
+      <li><a href="">Lodging</a></li>
+      <li><a href="">Registry</a></li>
+    </ul>
+
+
+<!--     <div class="text-box">
       <h1 class="serif">
       Jason M Perez
       <br />
@@ -15,20 +29,6 @@
       </h1>
 
 
-      <p class="sans">
-      	Request the honor of your presence as <br/>
-      	as they unite in marriage<br />
-      	on saturday. the fourteenth of october <br/>
-      	two thousand seventeen<br/>
-      	at four o'clock in the afternoon<br/>
-      	roberts redwood regional park<br/>
-      	oakland. california<br/>
-      	dinner. dancing. and revelry to follow<br/>
-      	at six o'clock in the evening<br/>
-      	leona lodge<br/>
-      	oakland. california<br/>
-      </p>
-
-    </div>
+    </div> -->
   </body>
 </html>
