--- a/information.html
+++ b/information.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css?family=Bellefair|Poppins" rel="stylesheet">
   </head>
   <body>
+
+
     <div class="text-box">
       <div class="internal">
         <p class="header">
@@ -14,25 +16,22 @@
         </p>
 
         <p class="text-block">
-          We request the honor of your presence<br/>
-          as we unite in marriage on<br/>
-          Saturday the October 14, 4:00pm<br/>
+          Our wedding will take place on October 14th, 2017 in Oakland, CA.<br/>
           <br/>
-          Roberts Redwood Regional Park. <br/> Oakland, CA </br>
+          Expect warm days (70-80*F) with cool, foggy nights <br />(as low as 50*F). <br/>
+        </br>
+          Wear layers. Rain may be possible.<br/>
+          Black-tie formal to semi-formal attire is preferred.<br/>
           <br/>
-          Dinner, dancing and revelry to follow<br/>
-          at 6:00pm, Leona Lodge. Oakland, CA<br/>
-        </p>
-        <br/>
-        <p class="text-block">
-          Please click here to <a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdFlczLZi5gN8Xb3zOIrxaEoYGCDGJEA_Hc_EZexqBrxUQMsA/viewform?usp=sf_link" target="_blank">
-          RSVP</a>
+          Please note that the ceremony portion of the event will be held in a redwood grove on forest soil. <br/>
+          <br/>
+          Tread carefully if you choose to rock stiletto heels.
         </p>
       </div>
         <div class="aside">
           <ul class="menu sans">
             <li><a href="index.html">Home</a></li>
-            <li><a href="information.html">Information</a></li>
+            <li><a href="" class="selected">Information</a></li>
             <li><a href="">Lodging</a></li>
             <li><a href="">Registry</a></li>
           </ul>
