--- a/index.html
+++ b/index.html
@@ -3,43 +3,58 @@
     <title><3 Jason and Andie <3</title>
     <link rel="stylesheet" href="normalize.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Bellefair|Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair|Poppins|Merriweather|Cormorant+Garamond:300,300i,400,400i,500|Forum" rel="stylesheet">
   </head>
   <body>
     <div class="text-box">
       <div class="internal">
-        <p class="header">
+        <p class="header" style="margin-bottom: 0;">
           Andie Kolbeck + Jason Perez<br/>
-          October 14, 2017. Oakland CA<br/>
         </p>
+        <p class="" style="font-weight: 0.5em">
+          October 14, 2017 ~ Oakland, CA
+        </p>
+        <br />
+        <p class="text-block">
+          <a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdFlczLZi5gN8Xb3zOIrxaEoYGCDGJEA_Hc_EZexqBrxUQMsA/viewform?usp=sf_link" target="_blank">
+          RSVP</a>
+        </p>
+
 
         <p class="text-block">
           We request the honor of your presence<br/>
-          as we unite in marriage on Saturday the October 14, 4:00pm<br/>
-          <br/>
-          Roberts Redwood Regional Park. <br/> Oakland, CA </br>
-          <br/>
-          Dinner, dancing and revelry to follow at 6:00pm, <br/>
-          Leona Lodge. Oakland, CA<br/>
+          as we unite in marriage on <br/>Saturday the October 14, 4:00pm
         </p>
-        <br/>
-        <!-- <p class="header">
-          Information
-        </p> -->
         <p class="text-block">
-          Expect warm days (70-80*F) with cool, foggy nights <br />(as low as 50*F). <br/>
-        </br>
-          Wear layers. Rain may be possible.<br/>
+          Expect warm days (70-80*F) with cool, foggy nights (as low as 50*F). Wear layers. Rain may be possible.<br/>
+        </p>
+        <p class="text-block">
           Black-tie formal to semi-formal attire is preferred.<br/>
-          <br/>
-          Please note that the ceremony portion of the event will be held in a redwood grove on forest soil. <br/>
-          <br/>
-          Tread carefully if you choose to rock stiletto heels.
+
+          Please note that the ceremony portion of the event <br/>will be held in a redwood grove on forest soil.<br/>
+        </p>
+        <p>&#10177;</p>
+        <p class="section-header" style="margin-bottom: 10px;">Wedding ceremony &amp; Cocktail Hour <br/> 4:00-5:30pm
+        </p>
+        <p class="text-block">
+          Roberts Redwood Regional Park<br/>
+          10570 Skyline Blvd, Oakland, CA 94611<br/>
+          Ceremony is at the Huckleberry picnic site, <br/>immediately to the right after entering the gate.<br/>
+          Parking is $5 at the gate.<br/>
+        </p>
+        <p>&#10177;</p>
+        <p class="section-header" style="margin-bottom: 10px;">
+          Dinner + Dancing + Revelry <br/> 6:00pm-11:30pm
+        </p>
+        <p class="text-block">
+          Leona Lodge</br>
+          4444 Mountain Blvd, Oakland, CA 94619</br>
+          Parking lot is small, but plenty of street parking is available.</br>
         </p>
 
-        <p class="text-block">
-          Please click here to <a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdFlczLZi5gN8Xb3zOIrxaEoYGCDGJEA_Hc_EZexqBrxUQMsA/viewform?usp=sf_link" target="_blank">
-          RSVP</a>
+
+        <p class="text-block" style="text-transform: uppercase;">
+          <a href="" target="_blank">Registry</a><br/>
         </p>
       </div>
         <!-- <div class="aside">
