--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title><3 Jason and Andie <3</title>
     <link rel="stylesheet" href="normalize.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="main.css" media="screen" title="no title" charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Bellefair|Poppins|Merriweather|Cormorant+Garamond:300,300i,400,400i,500|Forum" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
   </head>
   <body>
     <div class="text-box">
@@ -19,7 +19,6 @@
           <a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdFlczLZi5gN8Xb3zOIrxaEoYGCDGJEA_Hc_EZexqBrxUQMsA/viewform?usp=sf_link" target="_blank">
           RSVP</a>
         </p>
-
 
         <p class="text-block">
           We request the honor of your presence<br/>
@@ -57,14 +56,6 @@
           <a href="" target="_blank">Registry</a><br/>
         </p>
       </div>
-        <!-- <div class="aside">
-          <ul class="menu sans">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="information.html">Information</a></li>
-            <li><a href="">Lodging</a></li>
-            <li><a href="">Registry</a></li>
-          </ul>
-        </div> -->
     </div>
     <div class="death">
       Till Death Do Us Party
