--- a/index.html
+++ b/index.html
@@ -7,55 +7,46 @@
   </head>
   <body>
     <div class="text-box">
-      <div class="internal">
-        <p class="header" style="margin-bottom: 0;">
-          Andie Kolbeck + Jason Perez<br/>
-        </p>
-        <p class="" style="font-weight: 0.5em">
-          October 14, 2017 ~ Oakland, CA
-        </p>
-        <br />
-        <p class="text-block">
-          <a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdFlczLZi5gN8Xb3zOIrxaEoYGCDGJEA_Hc_EZexqBrxUQMsA/viewform?usp=sf_link" target="_blank">
-          RSVP</a>
-        </p>
-
-        <p class="text-block">
-          We request the honor of your presence<br/>
-          as we unite in marriage on <br/>Saturday the October 14, 4:00pm
-        </p>
-        <p class="text-block">
-          Expect warm days (70-80*F) with cool, foggy nights (as low as 50*F). Wear layers. Rain may be possible.<br/>
-        </p>
-        <p class="text-block">
-          Black-tie formal to semi-formal attire is preferred.<br/>
-
-          Please note that the ceremony portion of the event <br/>will be held in a redwood grove on forest soil.<br/>
-        </p>
-        <p>&#10177;</p>
-        <p class="section-header" style="margin-bottom: 10px;">Wedding ceremony &amp; Cocktail Hour <br/> 4:00-5:30pm
-        </p>
-        <p class="text-block">
-          Roberts Redwood Regional Park<br/>
-          10570 Skyline Blvd, Oakland, CA 94611<br/>
-          Ceremony is at the Huckleberry picnic site, <br/>immediately to the right after entering the gate.<br/>
-          Parking is $5 at the gate.<br/>
-        </p>
-        <p>&#10177;</p>
-        <p class="section-header" style="margin-bottom: 10px;">
-          Dinner + Dancing + Revelry <br/> 6:00pm-11:30pm
-        </p>
-        <p class="text-block">
-          Leona Lodge</br>
-          4444 Mountain Blvd, Oakland, CA 94619</br>
-          Parking lot is small, but plenty of street parking is available.</br>
-        </p>
-
-
-        <p class="text-block" style="text-transform: uppercase;">
-          <a href="" target="_blank">Registry</a><br/>
-        </p>
-      </div>
+      <h1>
+        Andie Kolbeck + Jason Perez<br/>
+      </h1>
+      <h2>
+        October 14, 2017 ~ Oakland, CA
+      </h2>
+      <a href="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdFlczLZi5gN8Xb3zOIrxaEoYGCDGJEA_Hc_EZexqBrxUQMsA/viewform?usp=sf_link" target="_blank">
+      RSVP</a>
+      <p>
+        We request the honor of your presence<br/>
+        as we unite in marriage on <br/>Saturday the October 14, 4:00pm
+      </p>
+      <p>
+        Expect warm days (70-80&#176; F) <br/>
+        with cool, foggy nights (as low as 50&#176; F). <br/>
+        Wear layers. Rain may be possible.<br/>
+      </p>
+      <p>
+        Black-tie formal to semi-formal attire is preferred.<br/>
+        Please note that the ceremony portion of the event <br/>will be held in a redwood grove on forest soil.<br/>
+      </p>
+      <p>&#10177;</p>
+      <p class="section-header">Wedding ceremony &amp; Cocktail Hour <br/> 4:00-5:30pm
+      </p>
+      <p>
+        Roberts Redwood Regional Park<br/>
+        10570 Skyline Blvd, Oakland, CA 94611<br/>
+        Ceremony is at the Huckleberry picnic site, <br/>immediately to the right after entering the gate.<br/>
+        Parking is $5 at the gate.<br/>
+      </p>
+      <p>&#10177;</p>
+      <p class="section-header">
+        Dinner + Dancing + Revelry <br/> 6:00pm-11:30pm
+      </p>
+      <p>
+        Leona Lodge</br>
+        4444 Mountain Blvd, Oakland, CA 94619</br>
+        Parking lot is small, but plenty of street parking is available.</br>
+      </p>
+      <a href="" target="_blank">Registry</a>
     </div>
     <div class="death">
       Till Death Do Us Party
